--- a/SysAsistenciaAn/src/main/resources/application.properties
+++ b/SysAsistenciaAn/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/asistenciaupeu
+#spring.datasource.url=jdbc:mysql://localhost:3306/asistenciaupeu
+spring.datasource.url=jdbc:mysql://172.22.6.32:3306/asistenciaupeu
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
